[gd_scene load_steps=7 format=2]

[ext_resource path="res://Assets/Paintings/a1.png" type="Texture" id=1]
[ext_resource path="res://Assets/Paintings/a2.png" type="Texture" id=2]
[ext_resource path="res://Assets/Paintings/a3.png" type="Texture" id=3]
[ext_resource path="res://Assets/Paintings/a5.png" type="Texture" id=4]
[ext_resource path="res://Scripts/PaintingFollow.gd" type="Script" id=5]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ), ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="PaintingFollow" type="Node2D"]
script = ExtResource( 5 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="BlinkTimer" type="Timer" parent="."]
wait_time = 0.3
one_shot = true

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="BlinkTimer" to="." method="_on_BlinkTimer_timeout"]
